Fixed event image stretching on mobile view

--- a/src/components/Activities/Activities.scss
+++ b/src/components/Activities/Activities.scss
@@ -5,6 +5,9 @@
 
   .banner {
     flex: 0 1 auto;
+    img {
+      height: 200px;
+    } 
   }
 
   .wrapper {
